@@ -860,10 +860,11 @@ public class Gossiper implements IFailureDetectionEventListener, GossiperMBean
              * than the version passed in. In this case we also send the old
              * heart beat and throw it away on the receiver if it is redundant.
             */
+            int localHbGeneration = epState.getHeartBeatState().getGeneration();
             int localHbVersion = epState.getHeartBeatState().getHeartBeatVersion();
             if (localHbVersion > version)
             {
-                reqdEndpointState = new EndpointState(epState.getHeartBeatState());
+                reqdEndpointState = new EndpointState(new HeartBeatState(localHbGeneration, localHbVersion));
                 if (logger.isTraceEnabled())
                     logger.trace("local heartbeat version " + localHbVersion + " greater than " + version + " for " + forEndpoint);
             }
@@ -876,7 +877,7 @@ public class Gossiper implements IFailureDetectionEventListener, GossiperMBean
                 {
                     if (reqdEndpointState == null)
                     {
-                        reqdEndpointState = new EndpointState(epState.getHeartBeatState());
+                        reqdEndpointState = new EndpointState(new HeartBeatState(localHbGeneration, localHbVersion));
                     }
                     final ApplicationState key = entry.getKey();
                     if (logger.isTraceEnabled())
